2011-09-23  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* providerDrv.c, support.c, result.c
	[ 3413031 ] fixes to perform check before calling free

2011-09-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 3412033 ] New files from 3313833 missed release tarball

2011-09-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c, sfcb.cfg.pre.in, control.c:
	[ 3406825 ] Make ssl cipher list configurable

2011-09-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c, sfcb.cfg.pre.in, control.c:
	[ 3406823 ] Make select timeout a config option.

2011-09-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3400114 ] sfcb fails to start with ipv6 disabled
	Patch from kkaempf

2011-08-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3398337 ] Namespaces of filter and handler for IndSub not checked

2011-08-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c: 
	[ 3393324 ] sfcb process abort in IndCIMXMLHandlerInvokeMethod

2011-08-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3386391 ] HOST_NAME_MAX undefined

2011-06-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3274893 ] For SFCB 1.4, set SequenceIdentifier as described in DSP1054 1.2.
	Fixed some warnings and a extra free.

2011-06-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3328763 ] deactivateFilter() doesn't release CMPI object

2011-06-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, interopProvider.c, sfcBroker.c, control.h,
	test/TestProviders/tests/IndRetryTest.sh:
	[ 3274893 ] For SFCB 1.4, set SequenceIdentifier as described in DSP1054 1.2.

2011-06-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mlog.c:
	[ 3323419 ] sfcb local interface causes zombie/defunct client processes
	(patch by Chris Poblete)

	* brokerUpc.c: