@@ -2036,10 +2036,11 @@ int updateMethodParamTypes(RequestHdr *hdr) {
        would have type as string. Check here to not fail the else-if below. */
     if (param && (ptok->type & CMPI_instance)) {
       int isEI = 0;
-      int qcount = ClClassGetMethParmQualifierCount(cl, meth, i);
+      int qcount = ClClassGetMethParmQualifierCount(cl, meth, p);
+      fprintf(stderr, "qcount is %d\n", qcount);
       for (; qcount > 0; qcount--) {
         char* qname;
-        ClClassGetMethParamQualifierAt(cl, param, qcount, NULL, &qname);
+        ClClassGetMethParamQualifierAt(cl, param, (qcount-1), NULL, &qname);
         if (strcmp(qname, "EmbeddedInstance") == 0) {
 	  // fprintf(stderr, "  is EmbeddedInstance\n");
           isEI = 1;
