@@ -1,3 +1,8 @@
+2011-09-27  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* cimXmlRequest.c:
+	[ 3414236 ] updateMethodParamTypes uses incorrect qualifier count
+
 2011-09-23  Narasimha Sharoff  <nsharoff@us.ibm.com>
 
 	* providerDrv.c, support.c, result.c
